Name:               hsc3-process-internal
Version:            0.7.0
Synopsis:           Create and control scsynth processes
Description:
    This library allows to create and control internal scsynth processes by using the
    @libscsynth@ shared library.
    .
    ChangeLog: <https://github.com/kaoskorobase/hsc3-process-internal/blob/master/ChangeLog.md>
License:            GPL
License-File:       LICENSE
Category:           Sound
Copyright:          Copyright (c) Stefan Kersten 2008-2012
Author:             Stefan Kersten
Maintainer:         Stefan Kersten
Stability:          experimental
Homepage:           http://space.k-hornz.de/software/hsc3-process
Tested-With:        GHC == 6.10, GHC == 6.12, GHC == 7.0, GHC == 7.2
Build-Type:         Simple
Cabal-Version:      >= 1.6

Library
  Exposed-Modules:  Sound.SC3.Server.Process.Internal

  Build-Depends:    base >= 3 && < 5
                  , bindings-sc3 >= 0.4 && < 0.5
                  , bytestring >= 0.8 && < 0.10
                  , hosc >= 0.7 && < 0.12
                  , hsc3 >= 0.7 && < 0.12
                  , hsc3-process >= 0.7 && < 0.8
                  , transformers >= 0.2 && < 0.4

  Ghc-Options:      -W
 
Source-Repository head
  Type:             git
  Location:         git://github.com/kaoskorobase/hsc3-process-internal.git
